# NeuralNetworkOpenGL

./: CMakeLists.txt
include/: Activations.hpp  Circle.hpp  Line.hpp  LinearRegression.hpp  LogisticRegression.hpp  Loss.hpp  Math.hpp  NeuralNetwork.hpp  Polygon.hpp  Random.hpp  Shader.h  Shader.hpp  Vector.hpp  Window.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Activations.cpp  Circle.cpp  Line.cpp  LinearRegression.cpp  LogisticRegression.cpp  Loss.cpp  Math.cpp  NeuralNetwork.cpp  Polygon.cpp  Random.cpp  Renderer.cpp  Shader.cpp  Vector.cpp  Window.cpp  main.cpp
